--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <link rel="stylesheet" href="css/index.css">
     <!--检测用户的浏览器HTML5和CSS3功能的一个js库-->
     <script src="//cdn.bootcss.com/modernizr/2.8.3/modernizr.min.js"></script>
-    <link rel="stylesheet" href="./js/lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./js/lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="Js/lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Js/lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
 </head>
 
 <body style="background-color: #DFE3EA;">
